# Itasha.Corp_S4F3-SCR1B3

./: .gitattributes  .gitignore  .gitleaks.toml  AGENT-RESULT.md  CODE_OF_CONDUCT.md  CONFIG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PLUGINS.md  PRIVACY.md  README.md  SECURITY.md  THEMING.md  THIRD-PARTY-LICENSES.md  about.toml  deny.toml
.cargo/: audit.toml  config.toml  mutants.toml
.github/: dependabot.yml  pull_request_template.md  requirements-zizmor.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cargo-deny.yml  ci.yml  codeql.yml  coverage.yml  dependency-review.yml  doc-sync-check.yml  egui-035-watch.yml  post-release-verify.yml  release-drift-check.yml  release.yml  sbom.yml  scorecard.yml  secret-scan.yml  workflow-security.yml
crates/scribe-app/: Cargo.toml  build.rs
crates/scribe-app/src/: action_log.rs  app.rs  change_bar.rs  cli.rs  datetime.rs  diff_view.rs  editor_features.rs  filetree.rs  find_cache.rs  find_in_files.rs  fuzzy.rs  grid.rs  issue_intake.rs  log_capture.rs  main.rs  md_preview.rs  multi_cursor.rs  plugin_manager.rs  reporting.rs  session_path_guard.rs  settings.rs  theme_editor.rs  to_markdown.rs  updater.rs
crates/scribe-app/src/app/: a11y_audit.rs  appnav_keyboard_tests.rs  background_override_tests.rs  build_plugins.rs  build_plugins_tests.rs  builtins.rs  change_bar_tests.rs  chrome.rs  commands.rs  deferred_actions.rs  deferred_actions_tests.rs  dialogs.rs  drag_scroll.rs  e2e.rs  e2e_overlays.rs  editor_overlays.rs  effects.rs  enc1_reload_wiring_tests.rs  error_message_tests.rs  execute_builtin_tests.rs  file_ops.rs  file_ops_tests.rs  filetree_tests.rs  find_in_files_tests.rs  find_nav.rs  find_nav_tests.rs  find_replace.rs  font_theme_tests.rs  foreground_area_guard.rs  frame_modals.rs  frame_tick.rs  gpu_probe.rs  grid_methods.rs  grid_pane_tests.rs  grid_render.rs  indent_tests.rs  jp_glyph_tests.rs  keyboard_input.rs  keyboard_input_tests.rs  keymap.rs  (+43 more)
crates/scribe-app/src/integration/: linux.rs  mod.rs  windows.rs  windows_entries.rs
crates/scribe-app/tests/visual-baseline/: README.md
crates/scribe-app/wix/: main.wxs
crates/scribe-core/: Cargo.toml
crates/scribe-core/assets/dict/: en_US.txt
crates/scribe-core/benches/: file_load.rs  rope_edits.rs  search.rs  syntax_highlight.rs
crates/scribe-core/proptest-regressions/: encoding.txt
crates/scribe-core/src/: buffer.rs  config.rs  document.rs  editing.rs  encoding.rs  eol.rs  error.rs  lib.rs  md_ops.rs  path_norm.rs  search.rs  session.rs  snippets.rs  spell.rs  syntax.rs  test_log_capture.rs  text_ops.rs  theme.rs  update.rs  url_scan.rs
crates/scribe-core/src/config/: appearance.rs  editor.rs  file_assoc.rs  keybindings.rs  mod.rs  motion.rs  reporting.rs  system.rs  window.rs
crates/scribe-core/src/lsp/: mod.rs  protocol.rs
crates/scribe-core/src/plugin/: host.rs  integrity.rs  mod.rs  pinned_keys.rs  registry.rs
crates/scribe-core/src/update/: apply.rs  manifest.rs  net.rs  update_state.rs  verify.rs
crates/scribe-core/tests/: crash_safety_atomic_save.rs  differential_grapheme_proptest.rs  i18n_encoding_matrix.rs  integration_document_lifecycle.rs  integration_plugin_lifecycle.rs  ipc_contract.rs  load_soak.rs  miri_soundness.rs  no_network_invariant.rs  plugin_examples.rs  plugin_sandbox_isolation.rs  qa_correctness_workflow.rs  qa_workflow_security.rs  roundtrip_proptest.proptest-regressions  roundtrip_proptest.rs
crates/scribe-render/: Cargo.toml
crates/scribe-render/src/: lib.rs
crates/scribe-render/src/post/: mod.rs  pipeline.rs  uniforms.rs
crates/scribe-render/src/post/shaders/: crt_post.wgsl
crates/scribe-render/src/rope_editor/: mod.rs  tab_geometry.rs  text_geometry_tests.rs
crates/scribe-win32-chrome/: Cargo.toml
crates/scribe-win32-chrome/src/: lib.rs
docs/: discoverability.md  threat-model.md
docs/adr/: 0001-stack-and-architecture.md  0002-license.md  0003-config-format.md  0004-telemetry-free-auto-update.md  0005-theming-customization.md  0006-syntax-engine.md  0006-ui-framework-ratify-egui.md  0007-coverage-exclusions-and-floor.md
docs/audits/: crt-post-pass-design.md  deep-scan-2026-05-29.md  final-gate-2026-05-29.md  overlooked-surfaces-2026-05-29.md  overlooked-surfaces-final-2026-05-30.md  overlooked-surfaces-regrade-2026-05-30-wave2.md  overlooked-surfaces-regrade-2026-05-30.md  round3-bug-rootcause.md  round3-egui-research.md  round3-verify-and-test-gap.md  ui-round2-deep-audit.md
examples/plugins/uppercase/: main.rhai  plugin.toml
examples/plugins/wordcount/: main.rhai  plugin.toml
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: config_parse.rs  encoding_decode.rs  lsp_frame_parse.rs  plugin_parse.rs  search_find_all.rs  snippets_parse.rs  text_ops.rs  theme_parse.rs  update_archive_extract.rs  update_json_parse.rs
packaging/: README.md  forge-wire-manifest.toml  gen-icons.sh  gen_icons.py  install.sh  minisign.pub  signing.md
packaging/linux/: debian-control  scr1b3.desktop
packaging/macos/: Info.plist  scr1b3.rb
packaging/windows/: ItashaCorp.SCR1B3.installer.yaml
scripts/: content_safety_audit.py  doc_sync_check.py  generate-jp-kanji-subset.py  test_doc_sync_check.py  verify_forge_wire_manifest.py
supply-chain/: audits.toml  config.toml
