# SCR1B3 — standalone cross-platform code/text editor (Itasha.Corp)
# Workspace manifest. A "better Notepad++": fast, telemetry-free, not bloated.
[workspace]
resolver = "2"
members = ["crates/scribe-core", "crates/scribe-render", "crates/scribe-app"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
repository = "https://github.com/itasha-corp/scr1b3"
authors = ["Itasha.Corp"]

[workspace.dependencies]
# Editor core
ropey = "1.6"                 # rope text buffer (1.x is battle-tested; 2.0 is beta)
memmap2 = "0.9"               # mmap large-file read-only browse
encoding_rs = "0.8"           # encoding conversion
chardetng = "0.1"             # encoding detection
regex = "1"                   # find/replace
# Config + theming
serde = { version = "1", features = ["derive"] }
toml = "0.8"
semver = "1"                  # plugin manifest min_app_version SemVer compare (Phase 20 T20.2)
directories = "5"             # per-OS config paths
notify = "6"                  # config/theme live-reload
notify-debouncer-mini = "0.4"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Errors
thiserror = "1"
anyhow = "1"
# UI (egui via eframe = winit + wgpu + egui, the official bundle)
# Phase 16 / T16.2: bumped 0.29 -> 0.34 (Rounding->CornerRadius, panel/Visuals
# API deltas migrated; matches the lockstep constraint with egui_tiles 0.15 +
# egui-phosphor 0.12). ADR docs/adr/0006-ui-framework-ratify-egui.md (T16.1).
eframe = { version = "0.34", default-features = false, features = ["wgpu", "default_fonts", "accesskit", "wayland", "x11"] }
egui = "0.34"
egui-phosphor = { version = "0.12", default-features = false, features = ["thin"] }  # Phosphor Thin icon font (T16.3, DECISION-2026-005 "hairline icons")
egui_tiles = "0.15"           # tiling layout engine — multi-note grid (Phase 18 T18.2). Pairs lockstep with egui 0.34. Default features include `serde` so the Tree round-trips through the existing TOML config.
# Internal
scribe-core = { path = "crates/scribe-core" }
scribe-render = { path = "crates/scribe-render" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true                  # tiny binary ("not bloated")
panic = "abort"
