# SCR1B3 — standalone cross-platform code/text editor (Itasha.Corp)
# Workspace manifest. A "better Notepad++": fast, telemetry-free, not bloated.
[workspace]
resolver = "2"
members = [
    "crates/scribe-core",
    "crates/scribe-render",
    "crates/scribe-app",
    "crates/scribe-win32-chrome",
]
# `fuzz/` is an independent cargo-fuzz workspace (needs nightly + libFuzzer);
# exclude it so the main build/test/clippy/deny gates never compile it.
exclude = ["fuzz"]

[workspace.package]
version = "0.4.59"
edition = "2021"
# True floor: the egui 0.34 stack (egui/eframe/egui_tiles/epaint…) declares
# rust-version 1.92, so the workspace cannot build below it. Verified with
# `cargo +1.92.0 check --workspace`. Enforced by the `msrv` CI job; bump both
# together when a dependency raises the floor.
rust-version = "1.92"
license = "MIT OR Apache-2.0"
repository = "https://github.com/46b-ETYKiAL/Itasha.Corp_S4F3-SCR1B3"
homepage = "https://github.com/46b-ETYKiAL/Itasha.Corp_S4F3-SCR1B3"
authors = ["Itasha.Corp"]

[workspace.dependencies]
# Editor core
ropey = "1.6"                 # rope text buffer (1.x is battle-tested; 2.0 is beta)
memmap2 = "0.9"               # mmap large-file read-only browse
encoding_rs = "0.8"           # encoding conversion
chardetng = "1"               # encoding detection (1.0 — new API: explicit ISO-2022-JP / UTF-8 detection enums)
regex = "1"                   # find/replace
# Config + theming
serde = { version = "1", features = ["derive"] }
toml = "1"                    # 1.x — major rewrite of toml-rs with improved newtype-tuple serialization
semver = "1"                  # plugin manifest min_app_version SemVer compare (Phase 20 T20.2)
directories = "6"             # per-OS config paths
notify = "8"                  # config/theme live-reload
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Errors
thiserror = "2"
anyhow = "1"
# UI (egui via eframe = winit + wgpu + egui, the official bundle)
# Phase 16 / T16.2: bumped 0.29 -> 0.34 (Rounding->CornerRadius, panel/Visuals
# API deltas migrated; matches the lockstep constraint with egui_tiles 0.15 +
# egui-phosphor 0.12). ADR docs/adr/0006-ui-framework-ratify-egui.md (T16.1).
eframe = { version = "0.34", default-features = false, features = ["wgpu", "default_fonts", "accesskit", "wayland", "x11", "persistence"] }  # `persistence` = native window pos+size restore + App::save() firing on exit/interval (ron state under the app_id folder)
egui = "0.34"
egui-phosphor = { version = "0.12", default-features = false, features = ["thin"] }  # Phosphor Thin icon font (T16.3, DECISION-2026-005 "hairline icons")
egui_tiles = "0.15"           # tiling layout engine — multi-note grid (Phase 18 T18.2). Pairs lockstep with egui 0.34. Default features include `serde` so the Tree round-trips through the existing TOML config.
# Internal
scribe-core = { path = "crates/scribe-core" }
scribe-render = { path = "crates/scribe-render" }
# Isolated Win32 chrome FFI (the only `unsafe` crate besides scribe-core's mmap).
scribe-win32-chrome = { path = "crates/scribe-win32-chrome" }
# W1TN3SS fleet reporting SDK — the safe, opt-in crash/error reporting spine
# (two-stream config model, sanitizer, local spool, hardened transport, preview
# API, consent-gated IngestBackend). Consumed via an EXACT-tag git pin (no
# version range) per dependency-management.md; it is itself
# `#![forbid(unsafe_code)]` and binds NO vendor SaaS/telemetry SDK (AES Clause
# 5). SCR1B3 calls it; it transmits nothing without a host-minted ConsentToken.
itasha-report-core = { git = "https://github.com/46b-ETYKiAL/Itasha.Corp_S4F3-W1TN3SS", tag = "itasha-report-core-v0.1.0" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true                  # tiny binary ("not bloated")
panic = "abort"
