# cargo-fuzz harness for SCR1B3. An independent workspace (`[workspace]` below)
# so the main `cargo build --workspace` and the CI gates ignore it — fuzz
# targets need nightly + libFuzzer and are built only via `cargo fuzz build`.
# Detected by the OpenSSF Scorecard Fuzzing probe.
[package]
name = "scribe-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
serde_json = "1"   # update_json_parse: parse the GitHub Releases API response
semver = "1"       # update_json_parse: select_best version compare

[dependencies.scribe-core]
path = "../crates/scribe-core"

# Parsing arbitrary input must never panic (it returns Err on malformed TOML;
# the editor falls back to defaults at the load layer).
[[bin]]
name = "config_parse"
path = "fuzz_targets/config_parse.rs"
test = false
doc = false
bench = false

# The save-time text transforms must never panic on arbitrary UTF-8.
[[bin]]
name = "text_ops"
path = "fuzz_targets/text_ops.rs"
test = false
doc = false
bench = false

# The find/replace engine must never panic on arbitrary pattern + text (a bad
# regex returns Err; a good one returns spans).
[[bin]]
name = "search_find_all"
path = "fuzz_targets/search_find_all.rs"
test = false
doc = false
bench = false

# The auto-updater parses the GitHub Releases API JSON BEFORE any signature
# check — it is untrusted network input. Parsing it + the highest-semver
# decision (`select_best`) must never panic on arbitrary bytes.
[[bin]]
name = "update_json_parse"
path = "fuzz_targets/update_json_parse.rs"
test = false
doc = false
bench = false

# Independent workspace: keeps the fuzz crate out of the root workspace so the
# main build/test/clippy/deny gates never try to compile it on stable.
[workspace]
