# cargo-fuzz harness for SCR1B3. An independent workspace (`[workspace]` below)
# so the main `cargo build --workspace` and the CI gates ignore it — fuzz
# targets need nightly + libFuzzer and are built only via `cargo fuzz build`.
# Detected by the OpenSSF Scorecard Fuzzing probe.
[package]
name = "scribe-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
serde_json = "1"   # update_json_parse: parse the GitHub Releases API response
semver = "1"       # update_json_parse: select_best version compare

[dependencies.scribe-core]
path = "../crates/scribe-core"

# Parsing arbitrary input must never panic (it returns Err on malformed TOML;
# the editor falls back to defaults at the load layer).
[[bin]]
name = "config_parse"
path = "fuzz_targets/config_parse.rs"
test = false
doc = false
bench = false

# The save-time text transforms must never panic on arbitrary UTF-8.
[[bin]]
name = "text_ops"
path = "fuzz_targets/text_ops.rs"
test = false
doc = false
bench = false

# The find/replace engine must never panic on arbitrary pattern + text (a bad
# regex returns Err; a good one returns spans).
[[bin]]
name = "search_find_all"
path = "fuzz_targets/search_find_all.rs"
test = false
doc = false
bench = false

# The auto-updater parses the GitHub Releases API JSON BEFORE any signature
# check — it is untrusted network input. Parsing it + the highest-semver
# decision (`select_best`) must never panic on arbitrary bytes.
[[bin]]
name = "update_json_parse"
path = "fuzz_targets/update_json_parse.rs"
test = false
doc = false
bench = false

# An arbitrary snippets.toml + body expansion must never panic (malformed TOML
# returns Err; expand walks arbitrary ${N}/$0 markers safely).
[[bin]]
name = "snippets_parse"
path = "fuzz_targets/snippets_parse.rs"
test = false
doc = false
bench = false

# Decoding arbitrary file bytes (any encoding) must never panic — decode is
# lossy-by-design and always yields a String; re-encoding must not panic either.
[[bin]]
name = "encoding_decode"
path = "fuzz_targets/encoding_decode.rs"
test = false
doc = false
bench = false

# The plugin trust boundary: an arbitrary `plugin.toml` manifest (malformed ->
# Err) and an arbitrary Rhai script compiled through the SANDBOXED host
# (disabled eval/import, bounded expr-depths, deadline guard) must never panic.
[[bin]]
name = "plugin_parse"
path = "fuzz_targets/plugin_parse.rs"
test = false
doc = false
bench = false

# A hostile/buggy language server's JSON-RPC frames are untrusted bytes off a
# subprocess pipe; the Content-Length header + JSON body parser must never panic
# or hang (header/message size caps bound memory; malformed -> Err).
[[bin]]
name = "lsp_frame_parse"
path = "fuzz_targets/lsp_frame_parse.rs"
test = false
doc = false
bench = false

# The self-updater downloads a `.tar.gz` (flate2 + tar) — the decompression-bomb
# + tar-slip CVE surface. Arbitrary archive bytes through the REAL extractor
# (basename-only join, non-regular-entry reject, 512 MiB cap) must never panic.
[[bin]]
name = "update_archive_extract"
path = "fuzz_targets/update_archive_extract.rs"
test = false
doc = false
bench = false

# A user-supplied `theme.toml` is untrusted: parse (malformed -> Err) + the
# parse_hex colour decoder over arbitrary palette values must never panic.
[[bin]]
name = "theme_parse"
path = "fuzz_targets/theme_parse.rs"
test = false
doc = false
bench = false

# Independent workspace: keeps the fuzz crate out of the root workspace so the
# main build/test/clippy/deny gates never try to compile it on stable.
[workspace]
