[package]
name = "scribe-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "SCR1B3 — standalone cross-platform code/text editor (the binary)."
default-run = "scr1b3"

[[bin]]
name = "scr1b3"
path = "src/main.rs"

[dependencies]
scribe-core.workspace = true
scribe-render.workspace = true
eframe.workspace = true
egui.workspace = true
egui-phosphor.workspace = true                 # hairline Phosphor icon font (Phase 16 T16.3)
egui_tiles.workspace = true                    # tiling layout for the multi-note grid (Phase 18 T18.2)
serde.workspace = true                         # DocId / Pane serde for Tree<Pane> persistence (Phase 18 T18.2)
tracing.workspace = true
tracing-subscriber.workspace = true
rfd = "0.15"          # native OS file dialogs (native-feel)
arboard = "3"         # OS clipboard read for palette-driven Paste (egui exposes no read API; already in tree via eframe)
notify = { workspace = true }                 # config/theme live-reload
notify-debouncer-mini = { workspace = true }
window-vibrancy = "0.7"                        # OS glass/acrylic/mica/vibrancy

[dev-dependencies]
tempfile = "3"
toml = { workspace = true }                    # Tree<Pane> round-trip test (Phase 18 T18.2)
minisign = "0.7"                               # sign in plugin-manager verify tests (round-trip only)
# Official egui UI-interaction test harness: drives the real render loop and
# clicks widgets BY LABEL (AccessKit) so tests exercise features the way a user
# does — not state-set-then-assert. Lockstep with egui 0.34; default features
# off (no GPU/snapshot backend needed for click/type interaction tests).
egui_kittest = { version = "0.34", default-features = false }
