[package]
name = "scribe-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "SCR1B3 — standalone cross-platform code/text editor (the binary)."
default-run = "scr1b3"
build = "build.rs"

[[bin]]
name = "scr1b3"
path = "src/main.rs"

[dependencies]
scribe-core.workspace = true
scribe-render.workspace = true
semver.workspace = true        # parse env!(CARGO_PKG_VERSION) for the self-updater version compare
eframe.workspace = true
egui.workspace = true
egui-phosphor.workspace = true                 # hairline Phosphor icon font (Phase 16 T16.3)
egui_tiles.workspace = true                    # tiling layout for the multi-note grid (Phase 18 T18.2)
serde.workspace = true                         # DocId / Pane serde for Tree<Pane> persistence (Phase 18 T18.2)
serde_json = "1"                               # JSON serialisation of the grid Tree<Pane> layout
tracing.workspace = true
tracing-subscriber.workspace = true
rfd = "0.15"          # native OS file dialogs (native-feel)
arboard = "3"         # OS clipboard read for palette-driven Paste (egui exposes no read API; already in tree via eframe)
notify = { workspace = true }                 # config/theme live-reload
window-vibrancy = "0.7"                        # OS glass/acrylic/mica/vibrancy

[dev-dependencies]
tempfile = "3"
# Glyph-coverage assertion for the bundled Noto Sans JP kanji subset. Same
# font crate egui 0.34 (epaint/skrifa) rasterizes with, so the test verifies
# coverage against the exact reader the app uses. Pinned to the in-tree version.
skrifa = "=0.40.0"
toml = { workspace = true }                    # Tree<Pane> round-trip test (Phase 18 T18.2)
minisign = "0.9"                               # sign in plugin-manager verify tests (round-trip only)
# Official egui UI-interaction test harness: drives the real render loop and
# clicks widgets BY LABEL (AccessKit) so tests exercise features the way a user
# does — not state-set-then-assert. Lockstep with egui 0.34; default features
# off (no GPU/snapshot backend needed for click/type interaction tests).
egui_kittest = { version = "0.34", default-features = false }

# Windows-only: embeds the multi-size .ico as a Win32 resource via build.rs so
# Explorer / taskbar / pre-launch Alt-Tab show the app icon. Unconditional
# build-dep so build.rs compiles on EVERY host (winresource is cross-platform,
# used even by Linux/macOS hosts cross-compiling to Windows); build.rs only
# INVOKES it when CARGO_CFG_TARGET_OS == "windows", so non-Windows targets embed
# nothing. A cfg(windows) scope would make the `winresource::` path in build.rs
# fail to resolve on macOS/Linux.
[build-dependencies]
winresource = "0.1"
