[package]
name = "scribe-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "SCR1B3 — standalone cross-platform code/text editor (the binary)."
default-run = "scr1b3"
build = "build.rs"

[[bin]]
name = "scr1b3"
path = "src/main.rs"

[dependencies]
scribe-core.workspace = true
scribe-render.workspace = true
scribe-win32-chrome.workspace = true           # isolated Win32 caption-button strip (double-caption fix)
itasha-report-core.workspace = true            # W1TN3SS opt-in crash-report SDK (consent-gated; default-OFF; no vendor SDK)
semver.workspace = true        # parse env!(CARGO_PKG_VERSION) for the self-updater version compare
eframe.workspace = true
egui.workspace = true
egui-phosphor.workspace = true                 # hairline Phosphor icon font (Phase 16 T16.3)
egui_tiles.workspace = true                    # tiling layout for the multi-note grid (Phase 18 T18.2)
serde.workspace = true                         # DocId / Pane serde for Tree<Pane> persistence (Phase 18 T18.2)
serde_json = "1"                               # JSON serialisation of the grid Tree<Pane> layout
tracing.workspace = true
tracing-subscriber.workspace = true
rfd = "0.17"          # native OS file dialogs (native-feel)
arboard = "3"         # OS clipboard read for palette-driven Paste (egui exposes no read API; already in tree via eframe)
notify = { workspace = true }                 # config/theme live-reload
mimalloc = "0.1"                               # global allocator — ~20% faster on egui/editor alloc churn (egui docs); unsafe is in-crate, app stays #![forbid(unsafe_code)]
pulldown-cmark = { version = "0.13", default-features = false, features = ["html"] }
similar = { version = "3", default-features = false, features = ["text"] }
htmd = "0.5"
toml.workspace = true
# Read the REAL native window handle from eframe's `Frame` (which implements
# `HasWindowHandle`) so the Win32 caption-button fix targets the correct HWND
# instead of an `EnumWindows` guess. Version-matched to eframe 0.34's
# raw-window-handle (0.6) so the trait/types line up. Handle extraction is safe
# (no `unsafe`), so the app keeps `#![forbid(unsafe_code)]`.
raw-window-handle = "0.6"

[dev-dependencies]
tempfile = "3"
# Glyph-coverage assertion for the bundled Noto Sans JP kanji subset. Same
# font crate egui 0.34 (epaint/skrifa) rasterizes with, so the test verifies
# coverage against the exact reader the app uses. Pinned to the in-tree version.
skrifa = "=0.40.0"
toml = { workspace = true }                    # Tree<Pane> round-trip test (Phase 18 T18.2)
minisign = "0.9"                               # sign in plugin-manager verify tests (round-trip only)
# Official egui UI-interaction test harness: drives the real render loop and
# clicks widgets BY LABEL (AccessKit) so tests exercise features the way a user
# does — not state-set-then-assert. Lockstep with egui 0.34. The `wgpu` feature
# adds the offscreen render-to-image backend (`Harness::render`) used by the
# (ignored, GPU-gated) visual-QA harness in src/app/visual_qa.rs. The `snapshot`
# feature is deliberately NOT enabled: we save+inspect the PNG ourselves, and
# snapshot's baseline-diff machinery (dify/rayon/open/…) would add a pile of
# unvetted dev-only crates for no benefit.
egui_kittest = { version = "0.34", default-features = false, features = [
    "wgpu",
] }
# Visual-QA render harness deps (dev-only; all already in the lock tree via
# eframe/egui-wgpu, so no new supply-chain surface). `wgpu`+`pollster` probe a
# real adapter so the harness skips cleanly on a GPU-less CI runner; `image`
# saves the rendered frame as a PNG for inspection.
wgpu = "29"
pollster = "0.4"
image = { version = "0.25", default-features = false, features = ["png"] }

# Windows-only: embeds the multi-size .ico as a Win32 resource via build.rs so
# Explorer / taskbar / pre-launch Alt-Tab show the app icon. Unconditional
# build-dep so build.rs compiles on EVERY host (winresource is cross-platform,
# used even by Linux/macOS hosts cross-compiling to Windows); build.rs only
# INVOKES it when CARGO_CFG_TARGET_OS == "windows", so non-Windows targets embed
# nothing. A cfg(windows) scope would make the `winresource::` path in build.rs
# fail to resolve on macOS/Linux.
[build-dependencies]
winresource = "0.1"
