[package]
name = "scribe-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "SCR1B3 editor core: buffer, file I/O, encoding, config, theme, syntax, search."

[dependencies]
ropey.workspace = true
memmap2.workspace = true
encoding_rs.workspace = true
chardetng.workspace = true
regex.workspace = true
serde.workspace = true
serde_json = "1"                                 # LSP JSON-RPC payloads
toml.workspace = true
directories.workspace = true
thiserror.workspace = true
tracing.workspace = true
tree-sitter = "0.24"
tree-sitter-highlight = "0.24"
tree-sitter-rust = "0.24"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-fancy"] }
rhai = { version = "1", features = ["sync"] }   # pure-Rust sandboxed scripting for the plugin "easy mode"
sha2 = "0.10"                                    # checksum verification for updates
minisign-verify = "0.2"                          # pure-Rust ed25519 update-signature verify
self-replace = "1"                               # atomic running-binary swap (Win rename-trick)
semver.workspace = true                          # plugin manifest min_app_version SemVer compare
ureq = { version = "3", features = ["json"] }    # pure-Rust (rustls) blocking HTTP for the self-updater network half
flate2 = "1"                                     # pure-Rust (miniz_oxide) gzip decode for the release .tar.gz
tar = "0.4"                                       # tar archive extraction of the release binary

[dev-dependencies]
tempfile = "3"
minisign = "0.9"                                 # sign in tests only (verify path round-trip)
proptest = "1.8.0"
unicode-segmentation = "1.13"                    # grapheme-cluster reference oracle (tests only)
# Micro-benchmarks for the editor hot paths (rope edits, syntax highlight,
# search, file load). `default-features = false` drops the `plotters`/HTML-report
# stack so the bench build stays lean and avoids gnuplot at smoke time; the
# `--save-baseline` / criterion CLI flags still work for regression tracking.
criterion = { version = "0.5.1", default-features = false }

# Hot-path micro-benchmarks. Each uses `harness = false` so criterion's own
# `criterion_main!` drives the run instead of libtest.
[[bench]]
name = "rope_edits"
harness = false

[[bench]]
name = "syntax_highlight"
harness = false

[[bench]]
name = "search"
harness = false

[[bench]]
name = "file_load"
harness = false

[lints.rust]
# `cfg(fuzzing)` is set automatically by `cargo fuzz build`; the `update::net`
# `fuzz_extract_binary` seam is gated on `cfg(any(test, fuzzing))`. Declaring the
# expected cfg here keeps `cargo build`/`clippy` on the lib alone (where the cfg
# is never set) free of the `unexpected_cfgs` warning under `-D warnings`.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }
