[package]
name = "scribe-render"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "SCR1B3 render layer: theme -> egui Visuals mapping, syntax color mapping, rope-editor widget."

[dependencies]
egui.workspace = true
scribe-core.workspace = true
# Phase 15 KEYSTONE — rope-editor widget reads + walks `Rope`s from the
# `scribe_core::buffer::Buffer::Rope` variant. ropey is pinned at the
# workspace level next to memmap2.
ropey = "1.6"

[dev-dependencies]
# Phase 15 KEYSTONE — smoke tests construct Ropes directly to drive the
# widget paint path; the workspace-pinned version is consumed via
# ropey = "1.6" above, so dev-deps don't need to repeat it.
